# ft_irc

./: .gitignore  Channel.hpp  Client.cpp  Client.hpp  Makefile  Server.cpp  Server.hpp  a.out  client  main.cpp
him/: CMakeLists.txt  Channel.cpp  Channel.hpp  Client.cpp  Client.hpp  Makefile  Message.cpp  Message.hpp  RPL.hpp  Server.cpp  Server.hpp  a.out  ircserv  main.cpp
